# visitors-observer

./: .env  .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  README.ru.md  config.py  description.md  docker-compose.yml  main.py  pyproject.toml  requirements-compile.txt  requirements-torch.txt  requirements.txt
.claude/: CLAUDE.md  settings.json
.claude/skills/: fastapi.md
.github/workflows/: ci.yml
api/: config.py  main.py  router.py
api/endpoints/: router.py
cv/: face_detector.py  main.py
src/: app.py
src/api/: router.py
src/cv/: face_detector.py
src/tbot/: command.py
tbot/: command.py
tests/: conftest.py  fixtures.py  test_available.py  test_check_photo.py
