[project]
name = "evlampiy"
version = "0.7.1"
description = "Bot (Evlampiy) for managing voice notes"
readme = "README.md"
authors = [{ name = "Yast", email = "yastcher@gmail.com" }]
requires-python = "~=3.13"
dependencies = [
    "python-telegram-bot~=21.11.1",
    "httpx[http2]>=0.28.1",
    "python-dotenv~=1.0.1",
    "pydantic-settings~=2.7.1",
    "wit~=6.0.1",
    "pydub~=0.25.1",
    "audioop-lts>=0.2; python_version>='3.13'",
    "openai~=1.59.8",
    "beanie==1.29.0",
    "motor==3.7.1",
    "pywa~=2.1",
    "fastapi~=0.115",
    "uvicorn~=0.34",
]

[dependency-groups]
dev = [
    "ruff~=0.14.0",
    "pytest>=9.0.2",
    "pytest-asyncio~=1.3",
    "pytest-mock==3.15.1",
    "pytest-cov~=7.0.0",
    "mongomock-motor~=0.0.34",
    "responses~=0.25.7",
]

[tool.ruff]
line-length = 100
exclude = [
    ".claude",
    ".github",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "I", # isort
    "G", # flake8-logging-format (logger %s not f-string)
    "PLC", # pylint convention (PLC0415 — no local imports)
    "PLR", # pylint refactor (PLR2004 — magic numbers)
    "SIM", # flake8-simplify
    "S", # flake8-bandit (security)
    "RUF", # ruff-specific
]
ignore = [
    "UP017", # datetime.UTC alias — conflicts with `import datetime` convention
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "S105", "S106"]
"src/localization.py" = ["RUF001", "E501"]
"src/github_oauth.py" = ["S105"]
"src/config.py" = ["S104"]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.isort]
known-third-party = ["telegram"]
known-local-folder = [
    "src",
    "tests",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
# skip-magic-trailing-comma = true

[tool.pytest.ini_options]
addopts = [
    "-p", "pytest_cov",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=json:coverage.json",
    "--cov-branch",
]
testpaths = ["tests"]
asyncio_mode = "auto"
